--- a/install-dokku.yml
+++ b/install-dokku.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: pc-servidor
+- hosts: dokku-server
 
   roles:
     - dokku_bot.ansible_dokku
@@ -7,8 +7,6 @@
   vars:
     pip_install_packages:
       - name: docker
-    dokku_users:
-      - name: pc-cliente
-        username: pc-cliente
-        ssh_key: /home/user/.ssh/pc-cliente.pub
-      
+  
+  tasks:
+    - import_tasks: install-web-client.yml
